Fixed homepage layout on smaller screens

--- a/public/assets/styles/home.css
+++ b/public/assets/styles/home.css
@@ -62,8 +62,8 @@ h2{
 }
 
 #submit-btn{
-    width: 14%;
-    margin: 0 43%;
+    width: 110px;
+    margin: 0 auto;
     align-self: center;
 }
 
